# realsense_apps

realsense_person_turtlebot_follower/: CMakeLists.txt  package.xml
realsense_person_turtlebot_follower/cfg/: RealSensePersonCoM.cfg
realsense_person_turtlebot_follower/launch/: follow_person.launch
realsense_person_turtlebot_follower/plugins/: nodelets.xml
realsense_person_turtlebot_follower/src/: realsense_person_com.cpp
