<?xml version="1.0"?>
<package>
  <name>realsense_person_turtlebot_follower</name>
  <version>0.0.1</version>
  <description>The realsense_person_turtlebot_follower package</description>

  <maintainer email="kevin.c.wells@intel.com">Kevin C. Wells</maintainer>

  <license>BSD 3-clause. See license attached.</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/realsense_person_turtlebot_follower</url> -->


  <author email="kevin.c.wells@intel.com">Kevin C. Wells</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>	
  <build_depend>realsense_person</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>realsense_person</run_depend>
  <run_depend>turtlebot_follower</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>


  <export>
    <nodelet plugin="${prefix}/plugins/nodelets.xml" />
  </export>
</package>
